--- a/src/main/resources/static/user/form.html
+++ b/src/main/resources/static/user/form.html
@@ -58,7 +58,7 @@
             	<span class="icon-bar"></span>
             	<span class="icon-bar"></span>
             	<span class="icon-bar"></span>
-            </button>            
+            </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
@@ -75,24 +75,21 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
+          <h2 class="text-center">회원가입</h2>
           <form name="question" method="get" action="/user/create">
               <div class="form-group">
-                  <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                  <label for="userId">아이디</label>
+                  <input class="form-control" id="userId" name="userId" placeholder="아이디를 입력하세요">
+              </div>
+              <div class="form-group">
+                  <label for="name">닉네임</label>
+                  <input class="form-control" id="name" name="name" placeholder="닉네임을 입력하세요">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                  <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요">
               </div>
-              <div class="form-group">
-                  <label for="name">이름</label>
-                  <input class="form-control" id="name" name="name" placeholder="Name">
-              </div>
-              <div class="form-group">
-                  <label for="email">이메일</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-              </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
+              <button type="submit" class="btn btn-primary clearfix center-block">회원가입</button>
               <div class="clearfix" />
           </form>
         </div>
