--- a/src/main/resources/static/user/form.html
+++ b/src/main/resources/static/user/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -39,7 +39,7 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li><a href="../../templates/user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
             </ul>
         </div>
     </div>
@@ -76,7 +76,7 @@
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           <h2 class="text-center">회원가입</h2>
-          <form name="question" method="get" action="/user/create">
+          <form action="/users" method="post" >
               <div class="form-group">
                   <label for="userId">아이디</label>
                   <input class="form-control" id="userId" name="userId" placeholder="아이디를 입력하세요">
