--- a/src/main/resources/static/qna/form.html
+++ b/src/main/resources/static/qna/form.html
@@ -79,7 +79,8 @@
           <form name="question" method="post" action="/articles">
               <div class="form-group">
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                  <input class="form-control" id="writer" name="writer"
+                         th:value="${session.loginUser.name}" placeholder="글쓴이" readonly />
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
